기본 개발 환경(파일 경로 및 아이콘)

--- a/index.html
+++ b/index.html
@@ -20,5 +20,20 @@
       <li>소통하고 화합하며 프로젝트 즐겨주세요.</li>
       <li>결과보다 과정이 중요합니다.‼️</li>
     </ul>
+
+    <!-- 컴포넌트  -->
+    <!-- 해당 부분에 각자 컨포넌트 연결해주세요 -->
+
+    <!--김한결  -->
+    <a href="./src/componenet/qna.html">qna</a>
+
+    <!-- 이찬미  -->
+    <a href=""></a>
+
+    <!-- 박성윤 -->
+    <a href=""></a>
+
+    <!-- 문유정 -->
+    <a href=""></a>
   </body>
 </html>
