download compoenet 제작

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 
     <!-- 박성윤 -->
     <a href=""></a>
+    <a href="./src/componenet/download.html">download</a>
 
     <!-- 문유정 -->
     <a href=""></a>
