--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     <!-- 해당 부분에 각자 컨포넌트 연결해주세요 -->
 
     <!--김한결  -->
+    <a href="./src/componenet/visual.html">visual</a>
     <a href="./src/componenet/qna.html">qna</a>
 
     <!-- 이찬미  -->
