--- a/index.html
+++ b/index.html
@@ -34,6 +34,6 @@
     <a href=""></a>
 
     <!-- 문유정 -->
-    <a href=""></a>
+    <a href="./src/componenet/apply.html">apply</a>
   </body>
 </html>
