--- a/index.html
+++ b/index.html
@@ -1,39 +1,44 @@
 <!DOCTYPE html>
 <html lang="ko-KR">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>프로젝트 - CSS</title>
-    <link rel="icon" href="/vite.svg" />
-    <link rel="preload" as="font" href="/font/woff2/PretendardVariable.woff2" crossorigin="anonymous" />
-    <link rel="stylesheet" as="style" href="/font/pretendardvariable.css" />
-    <script type="module" src="/src/main.js"></script>
-  </head>
-  <body>
-    <h1>Vite + CSS</h1>
-    <ul>
-      <li>컴포넌트를 분리해서 구현해주세요.</li>
-      <li>컴포넌트의 코드 리뷰를 AI를 통해 받은 후 개선해보세요.</li>
-      <li>개선점을 문서화하여 정리해 보세요</li>
-      <li>구현한 컴포넌트를 기반으로 페이지를 만들어주세요.</li>
-      <li>접근성과 성능을 신경써주세요</li>
-      <li>소통하고 화합하며 프로젝트 즐겨주세요.</li>
-      <li>결과보다 과정이 중요합니다.‼️</li>
-    </ul>
 
-    <!-- 컴포넌트  -->
-    <!-- 해당 부분에 각자 컨포넌트 연결해주세요 -->
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>프로젝트 - CSS</title>
+  <link rel="icon" href="/vite.svg" />
+  <link rel="preload" as="font" href="/font/woff2/PretendardVariable.woff2" crossorigin="anonymous" />
+  <link rel="stylesheet" as="style" href="/font/pretendardvariable.css" />
+  <script type="module" src="/src/main.js"></script>
+  <script type="module" src="/src/js/copy-component.js"></script>
+</head>
 
-    <!--김한결  -->
-    <a href="./src/componenet/qna.html">qna</a>
+<body>
+  <h1>Vite + CSS</h1>
+  <ul>
+    <li>컴포넌트를 분리해서 구현해주세요.</li>
+    <li>컴포넌트의 코드 리뷰를 AI를 통해 받은 후 개선해보세요.</li>
+    <li>개선점을 문서화하여 정리해 보세요</li>
+    <li>구현한 컴포넌트를 기반으로 페이지를 만들어주세요.</li>
+    <li>접근성과 성능을 신경써주세요</li>
+    <li>소통하고 화합하며 프로젝트 즐겨주세요.</li>
+    <li>결과보다 과정이 중요합니다.‼️</li>
+  </ul>
 
-    <!-- 이찬미  -->
-    <a href=""></a>
+  <!-- 컴포넌트  -->
+  <!-- 해당 부분에 각자 컨포넌트 연결해주세요 -->
 
-    <!-- 박성윤 -->
-    <a href=""></a>
+  <!--김한결  -->
+  <a href=" ./src/componenet/qna.html">qna</a>
 
-    <!-- 문유정 -->
-    <a href=""></a>
-  </body>
+  <!-- 이찬미  -->
+  <a href="./src/componenet/about-03.html">about</a>
+
+
+  <!-- 박성윤 -->
+  <a href=""></a>
+
+  <!-- 문유정 -->
+  <a href=""></a>
+</body>
+
 </html>
