--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <a href=""></a>
 
     <!-- 박성윤 -->
-    <a href=""></a>
+    <a href="./src/componenet/footer.html">footer</a>
 
     <!-- 문유정 -->
     <a href=""></a>
