--- a/index.html
+++ b/index.html
@@ -8,8 +8,6 @@
     <link rel="preload" as="font" href="/font/woff2/PretendardVariable.woff2" crossorigin="anonymous" />
     <link rel="stylesheet" as="style" href="/font/pretendardvariable.css" />
     <link rel="stylesheet" href="/src/common/index.css" />
-    <link rel="stylesheet" href="/src/componenet/css/qna.css" />
-    <link rel="stylesheet" as="style" href="/src/componenet/css/app.css" />
     <script type="module" src="/src/main.js"></script>
   </head>
 
@@ -29,18 +27,18 @@
     <!-- 해당 부분에 각자 컨포넌트 연결해주세요 -->
 
     <!--김한결  -->
-    <a href="./src/componenet/visual.html">visual</a>
-    <a href="./src/componenet/qna.html">qna</a>
+    <a href="./src/component/visual.html">visual</a>
+    <a href="./src/component/qna.html">qna</a>
 
     <!-- 이찬미  -->
-    <a href="./src/componenet/nav.html">nav</a>
-    <a href="./src/componenet/about-03.html">about</a>
+    <a href="./src/component/nav.html">nav</a>
+    <a href="./src/component/about-03.html">about</a>
 
     <!-- 박성윤 -->
-    <a href="./src/componenet/footer.html">footer</a>
+    <a href="./src/component/footer.html">footer</a>
 
     <!-- 문유정 -->
-    <a href="./src/componenet/apply.html">apply</a>
+    <a href="./src/component/apply.html">apply</a>
 
     <!-- 메뉴 -->
     <h1 class="sr-only">메뉴</h1>
